--- a/app/views/meetings/_meeting_form.html.erb
+++ b/app/views/meetings/_meeting_form.html.erb
@@ -4,12 +4,7 @@
   
   <div class ="form-control mb-2 w-75">
     <%= form.label t("activerecord.attributes.meeting.date"), class: "mb-2 w-25" %><br />
-    <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-      <%= form.text_field :date, value: time, class: "form-control datetimepicker-input", 'data-target':"#datetimepicker1" %>
-      <span class="input-group-addon" data-target="#datetimepicker1" data-toggle="datetimepicker">
-        <span class="fa fa-calendar pl-3"></span>
-      </span>
-    </div>
+    <%= form.text_field :date, class: "input-group form-control", id: "datepicker", value: meeting.date&.strftime('%d.%m.%Y %H:%m') %>
   </div>
 
   <%= form.text_area :description, placeholder: t("activerecord.attributes.meeting.description"), class: "mb-2 form-control w-75" %>
