--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <%= javascript_include_tag "/assets/builds/application.js", defer: true %>
-    <%= stylesheet_link_tag "application.css" %>
+    <%= javascript_include_tag "application", defer: true %>
+    <%= stylesheet_link_tag "application" %>
   </head>
 
   <body>
