--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
   <h2><%= t "my.passwords.new.title" %></h2>
 
   <div class = "form-group">
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, data: {turbo: false}) do |f| %>
+    <%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :post } do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
