--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <h2><%= t "my.registrations.new.title" %></h2>
 
   <div class = "form-group">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
+    <%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
