--- a/app/views/subscriptions/_subscription_form.html.erb
+++ b/app/views/subscriptions/_subscription_form.html.erb
@@ -1,6 +1,6 @@
 <div class="form-control mt-4">
   <h4 class="text-center"><%= t("my.subscriptions.create") %></h4>
-  <%= form_with model: Subscription, url: meeting_subscriptions_path(@meeting), method: :post, data: {turbo: false} do |form| %>
+  <%= form_with model: Subscription, url: meeting_subscriptions_path(@meeting), method: :post do |form| %>
     <%= form.text_field :user_name, placeholder: t("activerecord.attributes.user.nickname"), value: "", class: "mb-2 form-control w-100" %>
 
       <%= form.text_field :user_email, placeholder: t("activerecord.attributes.user.email"), value: "", class: "mb-2 form-control w-100" %>
