--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -58,7 +58,7 @@
       </p>
     </div>
     <div class="meeting-subscription-form">
-      <% if @meeting.user != current_user %>
+      <% if @meeting.user != current_user && @meeting.subscribers.exclude?(current_user) %>
         <% if user_signed_in? %>
           <%= button_to t("my.meetings.show.sub"), meeting_subscriptions_path(@meeting), class: "btn btn-primary", method: :post %>
         <% else %>
